# KaptoolsNexus

./: create-portable.ps1  fix-css-conflicts-complete.cjs  fix-css-conflicts-smart.cjs  package-lock.json  package.json  vite.config.ts
KapTools-Nexus-Portable/: Kaptoolnexus.vbs
backend/: build_backend.py  kaptools-backend.spec  main.py  mdd_real_service.py  requirements.txt
backend/config/: config.ini
backend/models/: duplicate_models.py
backend/routers/: duplicate_mdd.py
backend/services/: azure_service.py  git_service.py  mdd_processor.py  mdd_service.py  product_service.py
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json
src-tauri/src/: benchmark.rs  database.rs  duplicate_mdd.rs  jsonpath_client.rs  jsonpath_commands.rs  jsonpath_types.rs  lib.rs  main.rs  mdd_processor.rs
src/components/: CreateStructure.css  CreateStructure.css.complete-backup  CreateStructure.tsx  CreateStructure.tsx.complete-backup  Dashboard.css  Dashboard.tsx  DatabaseValidation.css  DownloadFiles.css  DownloadFiles.css.complete-backup  DownloadFiles.css.smart-backup  DownloadFiles.tsx  DownloadFiles.tsx.complete-backup  DuplicateMDD.css  DuplicateMDD.css.complete-backup  DuplicateMDD.tsx  FuturisticBackground.css  FuturisticBackground.tsx  HolographicButton.css  HolographicButton.css.complete-backup  HolographicButton.tsx.complete-backup  JSONPathTool.css  JSONPathTool.tsx  JsonViewer.css  JsonViewer.tsx  Modal.css  NeonDock.css  NeonDock.tsx  PostItNotes.css  PostItNotes.tsx  ProductChunksModal.css  ProductChunksModal.tsx  ProductData.css  ProductData.css.complete-backup  ProductData.tsx  QChunksProcessor.tsx  ReviewBranches.css  ReviewBranches.css.complete-backup  ReviewBranches.css.smart-backup  ReviewBranches.tsx  ReviewBranches.tsx.complete-backup  (+8 more)
src/components/ExchangeRate/: ExchangeRate.css  index.tsx
src/components/style/: SmartTooltip.css
src/hooks/: useDatabaseValidation.tsx  useExchangeRates.tsx  useSmartTooltip.tsx
src/utils/: test_backend.js
