[package]
name = "kaptools-nexus"
version = "2.0.0"
description = "KapTools Nexus Application"
authors = ["you"]
edition = "2021"

[lib]
name = "kaptools_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.14.1"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
byteorder = "1.5"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "0.6"
path-absolutize = "3"
jsonpath_lib = "0.3.0" 
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }


[features]
custom-protocol = ["tauri/custom-protocol"]
