[package]
name = "kaptools-nexus"
version = "2.0.0"
description = "KapTools Nexus Application"
authors = ["you"]
edition = "2021"

[lib]
name = "kaptools_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Core utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
jsonpath_lib = "0.3"

# HTTP client with streaming
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.0", features = ["full", "time"] }
futures-util = "0.3"
bytes = "1.0"

# Tauri - versión básica
tauri = { version = "2.0", features = [] }

# Tauri plugins - versiones compatibles con 2.0
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0" 
tauri-plugin-http = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2.0"

# Other utilities
base64 = "0.21"
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
path-absolutize = "3.1"
tempfile = "3.10"
uuid = { version = "1.10", features = ["v4"] }
zip = "2.1"
rfd = "0.14"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
